# harborai

./: .env.example  .env.test  .gitignore  404.html  CHANGELOG.md  CHANGELOG_LOG_ALIGNMENT.md  Dockerfile  Dockerfile.test  HarborAI_性能分析报告.md  HarborAI_成本统计模块测试报告.md  HarborAI日志系统演示总结报告.md  Makefile  README.md  README_test_deepseek.md  TDD_验证报告_最终版.md  analyze_coverage.py  check_available_models.py  comprehensive_performance_comparison.py  comprehensive_performance_report.md  comprehensive_performance_results.json  comprehensive_performance_test.py  comprehensive_test_report.md  create_clean_test.py  debug_agently_conversion.py  debug_agently_error.py  debug_architecture_test.py  debug_doubao_agently.py  debug_env_test.py  debug_fast_structured_output.py  debug_full_reasoning_stream.py  debug_harborai_agently_detailed.py  debug_json_schema.py  debug_mock_issue.py  debug_performance_config.py  debug_performance_test.py  debug_reasoning_stream.py  debug_stream_test.py  debug_structured_output.py  debug_test.py  debug_test_detailed.py  (+99 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: release-minimal-safe.yml  release-minimal.yml  release.yml  simple-release.yml  test-basic.yml  test.yml
.trae/documents/: HarborAI_PRD.md  HarborAI_Performance_Evaluation_Report_Template.md  HarborAI_Performance_Evaluation_Standards.md  HarborAI_Performance_Test_Execution_Report_Template.md  HarborAI_Performance_Testing_Implementation_Guide.md  HarborAI_SDK_Performance_Testing_Plan.md  HarborAI_SDK优化架构设计文档.md  HarborAI_SDK性能优化实施总结报告.md  HarborAI_SDK性能优化技术架构文档.md  HarborAI_SDK性能优化技术设计方案.md  HarborAI_SDK性能优化最终总结报告.md  HarborAI_SDK部署运维指南.md  HarborAI_TD.md  HarborAI_TDD.md  HarborAI_性能优化成果总结.md  HarborAI_日志字段对齐PRD.md  HarborAI_日志字段对齐技术文档.md  HarborAI_日志字段对齐技术架构文档.md  HarborAI功能与性能测试清单.md  HarborAI性能优化实施指南.md  HarborAI性能优化快速开始指南.md  HarborAI日志系统技术架构文档.md  HarborAI日志系统重构设计方案.md  HarborAI测试项目技术设计方案.md  HarborAI端到端测试方案.md  HarborAI结构化输出性能优化技术重构文档.md  vibe coding文档设计方案.md  内存优化实施完成确认.md  内存优化实施方案-assumptions与验证.md  当前项目可用模型列表.md  结构化输出性能优化建议.md  项目开发情况审查报告.md
LOG_FEATURES_GUIDE/: index.html
PostgreSQL_Docker_Setup/: index.html
PostgreSQL_Docker_使用说明/: index.html
api/: index.html
architecture/: index.html
backup_configs/: .env.test
config/: alerts.development.json  alerts.example.json  alerts.production.json
config/alerts/: alert_system_config.yaml  enhanced_alert_rules.yaml
deployment/: index.html
development/: index.html
docker/pgadmin/: servers.json
docker/postgres/: postgresql.conf
docker/redis/: redis.conf
docs/: Agently_HTTP401错误修复报告.md  Agently结构化输出语法设计理念.md  LOG_FEATURES_GUIDE.md  PostgreSQL_Docker_Setup.md  PostgreSQL_Docker_使用说明.md  README.md  api.md  architecture.md  concurrency_optimization_plan.md  deepseek豆包和文心官方结构化输出示例.md  deployment.md  development.md  performance.md  performance_optimization_report.md  test_cleanup_guide.md  test_refactoring_summary.md  快速路径配置指南.md  模型调用示例.md
examples/: .env.example  README.md  demo_complete_logging_system.py  log_system_verification_report.md  log_system_verification_report.py  performance_mode_demo.py  requirements.txt  run_all_log_demos.py
examples/advanced/: README.md  batch_processing.py  config_helper.py  fallback_strategy.py  fault_tolerance.py  log_analysis.py  performance_optimization.py
examples/basic/: README.md  async_calls.py  log_basics.py  reasoning_models.py  simple_chat.py  streaming_output.py
examples/scenarios/: README.md  chatbot_system.py  content_generation.py  data_analysis.py  enterprise_integration.py
harborai/: __init__.py
harborai/api/: app.py  client.py  decorators.py  fast_decorators.py  structured.py
harborai/cli/: __init__.py  main.py
harborai/config/: performance.py  settings.py
harborai/core/: __init__.py  agently_client_pool.py  async_cost_tracking.py  background_tasks.py  base_plugin.py  client_manager.py  cost_tracking.py  enhanced_error_handler.py  enhanced_pricing.py  exceptions.py  fallback.py  fast_structured_output.py  models.py  observability.py  plugin_manager.py  pricing.py  unified_decorators.py
harborai/database/: connection.py  file_log_parser.py  models.py  postgres_client.py  postgres_connection.py
harborai/monitoring/: cost_analysis.py  opentelemetry_tracer.py  prometheus_metrics.py  statistics_api.py
harborai/security/: __init__.py  access_control.py  data_protection.py  input_validation.py
harborai/static/: health_dashboard.html
harborai/storage/: __init__.py  fallback_logger.py  file_logger.py  lifecycle.py  postgres_logger.py
harborai/utils/: exceptions.py  logger.py  retry.py  timestamp.py  tracer.py
performance/: index.html
reports/: comprehensive_test_report.html  final_test_report.html  functional_test_report.html  harborai_structured_output_performance_report.md
scripts/: migrate_tracing_schema.py  release_v1.py  run_migration.py  run_tests.py  start_alert_system.py  validate_migration.py  validate_tracing_data.py
search/: search_index.json
test_refactoring_summary/: index.html
tests/: README.md  __init__.py  conftest.py  docker-compose.yml  pytest.ini  requirements-test.txt  test_async_cost_tracking_optimization.py  test_client.py  test_config.py  test_fast_path_optimization.py  test_integration.py  test_performance_integration.py  test_real_structured_output.py  test_structured_output.py  test_unified_report_manager.py
tests/e2e/: test_alert_config_e2e.py  test_alert_system_e2e.py
tests/end_to_end/: agently_structured_output_results.json  e2e_005_results.json  test_e2e_001_openai_api_compatibility.py  test_e2e_002_constructor_validation.py  test_e2e_003_reasoning_models.py  test_e2e_004_non_reasoning_models.py  test_e2e_005_streaming_calls.py  test_e2e_006_reasoning_stream.py  test_e2e_007_agently_structured_output.py  test_e2e_008_native_structured_output.py  test_e2e_009_reasoning_structured_output.py  test_e2e_010_async_calls.py  test_e2e_011_async_logging.py  test_e2e_012_cost_tracking.py  test_e2e_013_log_sanitization.py  test_simple_reasoning_validation.py  测试可用模型列表.md
tests/functional/: test_l_cli.py  (+18 more)
(+336 files in other folders)
